# mailbox-service

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
src/: main.rs  metrics.rs
src/server/: builder.rs  config.rs  mod.rs
src/server/websocket/: client.rs  connection.rs  mailbox.rs  mod.rs
